k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: companies-scraper
  labels:
    name: companies-scraper
